--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -21,6 +21,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.283185307179586"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import pi\n",
+    "def circumference(r):\n",
+    "    return pi * 2 * r\n",
+    "\n",
+    "circumference(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
